--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
             <p>"Hello, This is my first open-source contribution through ECWoC!"</p>
             <a href="https://github.com/squirrelk6755-ctrl" class="card-btn" target="_blank">GitHub</a>
         </div>
+        <div class="card">
+            <img src="images/yash12991.jpg" alt="Yash 's Photo" class="card-img">
+            <h2>YASH PATIL</h2>
+            <span class="role">Contributor</span>
+            <p>"CS student exploring Open Source. Happy to make my first PR!"</p>
+            <a href="https://github.com/yash12991" class="card-btn" target="_blank">GitHub</a>
+          
+        </div>
 
         <!-- ADD YOUR NEW CARD ABOVE THIS COMMENT -->
 
