chore(webhint): disable disown-opener rule and add card

--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
         <!-- 👆 CONTRIBUTORS: END COPYING HERE 👆 -->
 
         <div class="card">
+            <img src="images/jayesh.jpg" alt="Jayesh thar" class="card-img">
+            <h2>Jayesh Thar</h2>
+            <span class="role">Contributor</span>
+            <p>"Hy there! Let's connect and build..."</p>
+            <a href="https://github.com/jayesh-thar" class="card-btn" target="_blank">GitHub</a>
+        </div>
+        <div class="card">
             <img src="images/mohit-yadav.jpg" alt="Mohit Yadav's Photo" class="card-img">
             <h2>Mohit Yadav</h2>
             <span class="role">Frontend Wizard</span>
